feat: update fuzzer

--- a/fuzz/Makefile
+++ b/fuzz/Makefile
@@ -1,2 +1,2 @@
 qoa-fuzz: qoa-fuzz.c
-	clang -g -fsanitize=fuzzer,memory,undefined,nullability -fno-sanitize-recover=undefined -o qoa-fuzz qoa-fuzz.c
+	clang -g -fsanitize=fuzzer -o qoa-fuzz qoa-fuzz.c
